--- a/Project.toml
+++ b/Project.toml
@@ -4,4 +4,12 @@ authors = ["Ronny Bergmann <manopt@ronnybergmann.net>"]
 version = "0.1.0"
 
 [deps]
+Manifolds = "1cead3c2-87b3-11e9-0ccd-23c62b72b94e"
 ManifoldsBase = "3362f125-f0bb-47a3-aa74-596ffd7ef2fb"
+Manopt = "0fc0a36d-df90-57f3-8f93-d78a9fc72bb5"
+
+[compat]
+Manifolds = "0.3"
+ManifoldsBase = "0.9"
+Manopt = "0.2"
+julia = "1.0"
