starting work on tangent space transformer

--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,8 @@ authors = ["Ronny Bergmann <manopt@ronnybergmann.net>"]
 version = "0.1.0"
 
 [deps]
+MLJBase = "a7f614a8-145f-11e9-1d2a-a57a1082229d"
+MLJModelInterface = "e80e1ace-859a-464e-9ed9-23947d8ae3ea"
 Manifolds = "1cead3c2-87b3-11e9-0ccd-23c62b72b94e"
 ManifoldsBase = "3362f125-f0bb-47a3-aa74-596ffd7ef2fb"
 Manopt = "0fc0a36d-df90-57f3-8f93-d78a9fc72bb5"
