--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Ronny Bergmann <manopt@ronnybergmann.net>"]
 version = "0.1.0"
 
 [deps]
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 MLJBase = "a7f614a8-145f-11e9-1d2a-a57a1082229d"
 MLJModelInterface = "e80e1ace-859a-464e-9ed9-23947d8ae3ea"
 Manifolds = "1cead3c2-87b3-11e9-0ccd-23c62b72b94e"
@@ -13,15 +14,18 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 
 [compat]
+MLJBase = "0.15"
+MLJModelInterface = "0.3"
 Manifolds = "0.3"
 ManifoldsBase = "0.9"
 Manopt = "0.2"
 julia = "1.0"
 
 [extras]
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 MultivariateStats = "6f286f6a-111f-5878-ab1e-185364afe411"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Distances", "MultivariateStats", "Test"]
+test = ["DataFrames", "Distances", "MultivariateStats", "Test"]
