--- a/Project.toml
+++ b/Project.toml
@@ -19,7 +19,7 @@ Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 [compat]
 MLJBase = "0.15"
 MLJModelInterface = "0.3"
-Manifolds = "0.3"
+Manifolds = "0.3, 0.4"
 ManifoldsBase = "0.9"
 Manopt = "0.2"
 julia = "1.0"
